@@ -13,6 +13,7 @@ Version 0.5.0~dev
 	* Use ffmpeg-static instead of ffmpeg in ffmpeg worker.
 	* Add avinfo extract action, closes: #5545.
 	* Update code documentation.
+	* Implement Worker._handle_output method.
 
 Version 0.4.0 Released on 2012/01/16
 
